# irmars

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: pr-title.yml  release-plz.yml  rust.yml
examples/: disclosure.rs  issuance.rs  signature.rs
src/: irmaclient.rs  lib.rs  sessionrequest.rs
tests/: test_cancel.rs  test_client_cancel.rs  test_full_client_interaction.rs  test_health.rs
