[package]
name = "irmars"
version = "0.2.1"
authors = [
    "David Venhoek <david@venhoek.nl>",
    "Ruben Hensen <r.hensen@caesar.nl>",
]
edition = "2021"
repository = "https://github.com/encryption4all/irmars"
license = "Apache-2.0"
description = "A rust interface for interacting with IRMA servers (encryption4all fork)"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"

[dev-dependencies]
maplit = "1.0"
qrcode = "0.14"
serial_test = "3.2"
tokio = { version = "1.40", features = ["full"] }
tokio-test = "0.4"
